[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "virtue-skill"
authors = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
]
maintainers = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
]
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Other Scripting Engines",
   "Programming Language :: Other",
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX :: Linux",
   "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
   "Topic :: Scientific/Engineering",
   "Topic :: Software Development",
   "Topic :: Software Development :: Libraries",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Testing",
   "Topic :: Software Development :: Testing :: Unit",
]
keywords = [
   "circuit design",
   "design automation",
   "Cadence",
   "virtuoso",
   "SKILL",
   "Python"
]
dynamic = ["version", "description"]

[project.urls]
"Home" = "http://www.cascode-labs.org/virtue/"
"Documentation" = "http://www.cascode-labs.org/virtue/"
"Source" = "https://github.com/cascode-labs/virtue"

[tool.flit.module]
name = "virtue"
