[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "virtue-skill"
dependencies = [
   "typer >= 0.6.1, < 1.0.0",
   "rich >= 12.5.1, < 13.0.0",
   "pluggy >= 1.0.0, < 2.0.0",
]
authors = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
]
maintainers = [
   {name="Curtis Mayberry", email="Curtisma3@gmail.com"},
]
readme = "README.md"
license = {file="LICENSE"}
requires-python = ">=3.7"
classifiers = [
   "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
   "Topic :: Scientific/Engineering",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Other Scripting Engines",
   "Programming Language :: Other",
   "License :: OSI Approved :: MIT License",
   "Operating System :: POSIX :: Linux",
   "Topic :: Software Development",
   "Topic :: Software Development :: Libraries",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Testing",
   "Topic :: Software Development :: Testing :: Unit",
]
keywords = [
   "circuit design",
   "design automation",
   "Cadence",
   "virtuoso",
   "SKILL",
   "Python"
]
dynamic = ["version", "description"]

[project.urls]
"Home" = "http://www.cascode-labs.org/virtue/"
"Documentation" = "http://www.cascode-labs.org/virtue/"
"Source" = "https://github.com/cascode-labs/virtue"

[project.scripts]
virtue = "virtue.cli:app"


[tool.flit.module]
name = "virtue"

[project.optional-dependencies]
optional = ["softworks", "skillbridge"]
test = [
    "pytest >=7.1.2",
    "pylint >= 2.14.4",
    "mypy >= 0.961",
]
dev = ["pre-commit == 2.20.0"]
doc = [
   "sphinx == 4.5.0",
   "pydata-sphinx-theme == 0.9.0",
   "sphinx-panels == 0.6.0",
   "sphinx_copybutton == 0.5.0",
   "sphinx-autobuild == 2021.3.14",
   "sphinx-github-changelog == 1.2.0",
   "sphinx-sitemap == 2.2.0",
   "sphinx-click == 4.3.0",
]
